Checked in 12/28/2016 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/editaddress.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/editaddress.xhtml
@@ -260,10 +260,10 @@
 
 
 <div class="Container100 Responsive100 MarTop5">
-                <div class="Container32 Fleft CustomWidthFA2 MarTop5">
+                <div class="Container45 Fleft CustomWidthFA2 MarTop5">
                     <label Class="Container100"
-                           style="text-align: left !important; font-weight: bold !important;">New Primary Phone
-                        No. *</label>
+                           style="text-align: left !important; font-weight: bold !important;">New Phone
+                        Number *</label>
 
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
@@ -272,7 +272,7 @@
                                  mask="(999) 999-9999" placeholder="Primary Phone" required="false">
                     </p:inputMask>
                 </div>
-                <div class="Container32 Fleft CustomWidthFA2 MarTop5">
+                <!-- <div class="Container32 Fleft CustomWidthFA2 MarTop5">
                     <label Class="Container100"
                            style="text-align: left !important; font-weight: bold !important;">New Secondary Phone
                         No. *</label>
@@ -283,8 +283,8 @@
                                  maxlength="15"
                                  mask="(999) 999-9999" placeholder="Primary Phone" required="false">
                     </p:inputMask>
-                </div>
-                <div class="Container32 FrightForced CustomWidthFA2 MarTop5">
+                </div> -->
+                <div class="Container45 FrightForced CustomWidthFA2 MarTop5">
                     <label Class="Container100"
                            style="text-align: left !important; font-weight: bold !important;">New Email Address *</label>
 
@@ -651,19 +651,18 @@
 
                     <div class="EmptyBox20"></div>
 <div class="Container100 Responsive100 MarTop5">
-                <div class="Container32 Fleft CustomWidthFA2 MarTop5">
+                <div class="Container45 Fleft CustomWidthFA2 MarTop5">
                     <label Class="Container100"
                            style="text-align: left !important; font-weight: bold !important;">New Primary Phone
                         No. *</label>
 
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
-                                 
                                  maxlength="15"
                                  mask="(999) 999-9999" placeholder="Primary Phone" required="false">
                     </p:inputMask>
                 </div>
-                <div class="Container32 Fleft CustomWidthFA2 MarTop5">
+               <!--  <div class="Container32 Fleft CustomWidthFA2 MarTop5">
                     <label Class="Container100"
                            style="text-align: left !important; font-weight: bold !important;">New Secondary Phone
                         No. *</label>
@@ -674,8 +673,8 @@
                                  maxlength="15"
                                  mask="(999) 999-9999" placeholder="Primary Phone" required="false">
                     </p:inputMask>
-                </div>
-                <div class="Container32 FrightForced CustomWidthFA2 MarTop5">
+                </div> -->
+                <div class="Container45 FrightForced CustomWidthFA2 MarTop5">
                     <label Class="Container100"
                            style="text-align: left !important; font-weight: bold !important;">New Email Address *</label>
 
