--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/editbeneficiary.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/editbeneficiary.xhtml
@@ -176,6 +176,19 @@
 							</div>
 						</div>
 						<div class="EmptyBox20"></div>
+						 <div class="Container100">
+
+                        <label Class="Container60"
+                               style="text-align: left !important; font-weight: bold !important;">Address *</label>
+
+                        <div class="EmptyBox5"></div>
+                        <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft  AddressFieldOnlyB"
+                                     placeholder="Address"
+                                     autocomplete="off" maxlength="50" required="false">
+
+                        </p:inputText>
+                    </div>
+                    <div class="EmptyBox20"></div>
 						<div class="Container100">
 							<div class="Container32 Fleft CustomWidthFA2 MarTop5">
 								<label Class="Container100"
