Checked in 12/28/2016 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/editaddress.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/editaddress.xhtml
@@ -185,7 +185,7 @@
 				</div>
 				<div class="EmptyBox10"></div>
 
-				<div class="Container80 Responsive100 MarTop5 MarCenter"
+				<div class="Container100 Responsive100 MarTop5 MarCenter"
 					style="margin-bottom: 15px;">
 
 					<p:panel rendered="#{tdcto.getErrorMessage(3) != null}"
@@ -695,7 +695,7 @@
 				<p:panel id="jointmailaddressPanel2"
 					style="border: 0px; background: transparent"
 					styleClass="Container100 Responsive100 MarTop5 MarCenter"
-					rendered="#{tdcto.tdMasterData.jointhasDifferent}">
+					rendered="true">
 
 					<div class="Container100">
 						<p:selectBooleanCheckbox
