Checked in 12/30/2016 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/editaddress.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/editaddress.xhtml
@@ -31,20 +31,19 @@
 							<div class="Container100">
 
 								<label Class="Container60"
-									style="text-align: left !important; font-weight: bold !important;">
-									Old Residence Address*</label>
+									style="text-align: left !important; font-weight: bold !important;">Residence Address*</label>
 
 								<div class="EmptyBox5"></div>
 								<p:inputText
 									styleClass="CustomWidthAddressFA FS14 Fleft  AddressFieldOnly"
 									value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressStreet}"
-									placeholder="Old Residence Street Address 1" autocomplete="off"
+									placeholder="Residence Street Address 1" autocomplete="off"
 									maxlength="50" required="false">
 
 								</p:inputText>
 							</div>
 
-							<div class="EmptyBox20"></div>
+							<div class="EmptyBox10 EmptyResponsive"></div>
 							<div class="Container100 CustomWidthFA2 MarTop5">
 								<div class="Container30 CustomWidthFA-Responsive">
 									<label Class="Container100"
@@ -90,11 +89,8 @@
 									</p:inputText>
 								</div>
 							</div>
-							<div class="EmptyBox20"></div>
 
-
-
-
+<div class="EmptyBox10"></div>
 
 						</div>
 
@@ -105,25 +101,24 @@
 							<p:panel
 								style="border: 0px; background: transparent; margin-top: -10px;"
 								rendered="true">
-								<div class="EmptyBox20"></div>
+								<div class="EmptyBox0"></div>
 								<div class="Container100">
 
 									<label Class="Container60"
-										style="text-align: left !important; font-weight: bold !important;">
-										Old Mailing Address *</label>
+										style="text-align: left !important; font-weight: bold !important;">Mailing Address *</label>
 
-									<div class="EmptyBox5"></div>
+									<!-- <div class="EmptyBox5"></div> -->
 									<p:inputText
 										styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
 										value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressStreet}"
-										maxlength="50" placeholder="Old Mailing Street Address 1">
+										maxlength="50" placeholder="Mailing Street Address 1">
 									</p:inputText>
 									<!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                       placeholder="Street Address 2">
                          </p:inputText> -->
 								</div>
 
-								<div class="EmptyBox20"></div>
+								<div class="EmptyBox10 EmptyResponsive"></div>
 								<div class="Container100 CustomWidthFA2 MarTop5">
 									<div class="Container30 CustomWidthFA-Responsive">
 										<label Class="Container100"
@@ -198,8 +193,7 @@
 					<div class="Container100">
 
 						<label Class="Container60"
-							style="text-align: left !important; font-weight: bold !important;">
-							Residence Address *</label>
+							style="text-align: left !important; font-weight: bold !important;">Residence Address *</label>
 
 						<div class="EmptyBox5"></div>
 						<p:inputText
@@ -211,7 +205,7 @@
 						</p:inputText>
 					</div>
 
-					<div class="EmptyBox20"></div>
+					<div class="EmptyBox10 EmptyResponsive"></div>
 					<div class="Container100 CustomWidthFA2 MarTop5">
 						<div class="Container30 CustomWidthFA-Responsive">
 							<label Class="Container100"
@@ -255,25 +249,24 @@
 							</p:inputText>
 						</div>
 					</div>
-					<div class="EmptyBox20"></div>
+					<div class="EmptyBox10 EmptyResponsive"></div>
 
 
 
 					<div class="Container100 Responsive100 MarTop5">
 						<div class="Container45 Fleft CustomWidthFA2 MarTop5">
 							<label Class="Container100"
-								style="text-align: left !important; font-weight: bold !important;">New
-								Phone Number *</label>
+								style="text-align: left !important; font-weight: bold !important;">Phone Number *</label>
 
 							<div class="EmptyBox5"></div>
-							<p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
+							<p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 MarTop5"
 								maxlength="15" mask="(999) 999-9999" placeholder="Primary Phone"
 								required="false">
 							</p:inputMask>
 						</div>
 						<!-- <div class="Container32 Fleft CustomWidthFA2 MarTop5">
                     <label Class="Container100"
-                           style="text-align: left !important; font-weight: bold !important;">New Secondary Phone
+                           style="text-align: left !important; font-weight: bold !important;">Secondary Phone
                         No. *</label>
 
                     <div class="EmptyBox5"></div>
@@ -285,8 +278,7 @@
                 </div> -->
 						<div class="Container45 FrightForced CustomWidthFA2 MarTop5">
 							<label Class="Container100"
-								style="text-align: left !important; font-weight: bold !important;">New
-								Email Address *</label>
+								style="text-align: left !important; font-weight: bold !important;">Email Address *</label>
 
 							<div class="EmptyBox5"></div>
 							<p:inputText styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
@@ -294,7 +286,7 @@
 							</p:inputText>
 						</div>
 					</div>
-					<div class="EmptyBox20"></div>
+					<div class="EmptyBox10"></div>
 				</div>
 
 
@@ -318,10 +310,9 @@
 					<div class="Container100">
 
 						<label Class="Container60"
-							style="text-align: left !important; font-weight: bold !important;">
-							Mailing Address *</label>
-
-						<div class="EmptyBox5"></div>
+							style="text-align: left !important; font-weight: bold !important;">Mailing Address *</label>
+<!-- 
+						<div class="EmptyBox5"></div> -->
 						<p:inputText
 							styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
 							value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressStreet}"
@@ -332,7 +323,7 @@
                          </p:inputText> -->
 					</div>
 
-					<div class="EmptyBox20"></div>
+					<div class="EmptyBox10 EmptyResponsive"></div>
 					<div class="Container100 CustomWidthFA2 MarTop5">
 						<div class="Container30 CustomWidthFA-Responsive">
 							<label Class="Container100"
@@ -399,7 +390,7 @@
 
 		<p:tab title="#{tdcto.tdMasterData.titleSecondary}" rendered="true">
 
-			<p:panel id="jointaddressPanel" styleClass="MarCenter Container80"
+			<p:panel id="jointaddressPanel" styleClass="MarCenter Container80 Responsive100"
 				style="border: 0px; background: transparent">
 
 				<div class="Container100 Responsive100 MarTop5 MarCenter">
@@ -436,20 +427,19 @@
 						<div class="Container100">
 
 							<label Class="Container60"
-								style="text-align: left !important; font-weight: bold !important;">
-								Old Residence Address*</label>
+								style="text-align: left !important; font-weight: bold !important;">Residence Address*</label>
 
 							<div class="EmptyBox5"></div>
 							<p:inputText
 								styleClass="CustomWidthAddressFA FS14 Fleft  AddressFieldOnly"
 								value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressStreet}"
-								placeholder="Old Residence Street Address 1" autocomplete="off"
+								placeholder="Residence Street Address 1" autocomplete="off"
 								maxlength="50" required="false">
 
 							</p:inputText>
 						</div>
 
-						<div class="EmptyBox20"></div>
+						<div class="EmptyBox10 EmptyResponsive"></div>
 						<div class="Container100 CustomWidthFA2 MarTop5">
 							<div class="Container30 CustomWidthFA-Responsive">
 								<label Class="Container100"
@@ -495,7 +485,7 @@
 								</p:inputText>
 							</div>
 						</div>
-						<div class="EmptyBox20"></div>
+						
 
 
 
@@ -514,21 +504,20 @@
 							<div class="Container100">
 
 								<label Class="Container60"
-									style="text-align: left !important; font-weight: bold !important;">
-									Old Mailing Address *</label>
+									style="text-align: left !important; font-weight: bold !important;">Mailing Address *</label>
 
 								<div class="EmptyBox5"></div>
 								<p:inputText
 									styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
 									value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressStreet}"
-									maxlength="50" placeholder="Old Mailing Street Address 1">
+									maxlength="50" placeholder="Mailing Street Address 1">
 								</p:inputText>
 								<!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                       placeholder="Street Address 2">
                          </p:inputText> -->
 							</div>
 
-							<div class="EmptyBox20"></div>
+							<div class="EmptyBox10 EmptyResponsive"></div>
 							<div class="Container100 CustomWidthFA2 MarTop5">
 								<div class="Container30 CustomWidthFA-Responsive">
 									<label Class="Container100"
@@ -590,8 +579,7 @@
 
 					<div class="Container100">
 						<label Class="Container60"
-							style="text-align: left !important; font-weight: bold !important;">
-							Residence Address *</label>
+							style="text-align: left !important; font-weight: bold !important;">Residence Address *</label>
 
 						<div class="EmptyBox5"></div>
 						<p:inputText
@@ -604,7 +592,7 @@
                                       placeholder="Street Address 2">
                          </p:inputText> -->
 					</div>
-					<div class="EmptyBox20"></div>
+					<div class="EmptyBox10 EmptyResponsive"></div>
 
 					<div class="Container100 CustomWidthFA2 MarTop5">
 						<div class="Container30 CustomWidthFA-Responsive">
@@ -650,12 +638,11 @@
 						</div>
 					</div>
 
-					<div class="EmptyBox20"></div>
+					<div class="EmptyBox10 EmptyResponsive"></div>
 					<div class="Container100 Responsive100 MarTop5">
 						<div class="Container45 Fleft CustomWidthFA2 MarTop5">
 							<label Class="Container100"
-								style="text-align: left !important; font-weight: bold !important;">New
-								Primary Phone No. *</label>
+								style="text-align: left !important; font-weight: bold !important;">Primary Phone No. *</label>
 
 							<div class="EmptyBox5"></div>
 							<p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
@@ -665,7 +652,7 @@
 						</div>
 						<!--  <div class="Container32 Fleft CustomWidthFA2 MarTop5">
                     <label Class="Container100"
-                           style="text-align: left !important; font-weight: bold !important;">New Secondary Phone
+                           style="text-align: left !important; font-weight: bold !important;">Secondary Phone
                         No. *</label>
 
                     <div class="EmptyBox5"></div>
@@ -677,8 +664,7 @@
                 </div> -->
 						<div class="Container45 FrightForced CustomWidthFA2 MarTop5">
 							<label Class="Container100"
-								style="text-align: left !important; font-weight: bold !important;">New
-								Email Address *</label>
+								style="text-align: left !important; font-weight: bold !important;">Email Address</label>
 
 							<div class="EmptyBox5"></div>
 							<p:inputText styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
@@ -728,7 +714,7 @@
                             </p:inputText> -->
 						</div>
 
-						<div class="EmptyBox20"></div>
+						<div class="EmptyBox10 EmptyResponsive"></div>
 						<div class="Container100 CustomWidthFA2 MarTop5">
 							<div class="Container30 CustomWidthFA-Responsive">
 								<label Class="Container100"
