Checked in  (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -180,7 +180,7 @@
 															</p:overlayPanel>
 															<span class="dsahboardEditDropdownBlock">
 															<p:menuButton value="Options" styleClass="InfoNewDash customMenuButtonDashboard">
-        <p:menuitem value="Edit Beneficiary"/>
+        <p:menuitem value="Change Address"/>
         <p:menuitem value="Add Beneficiary"/>
         <p:menuitem value="Amount Withdrawal"/>
     </p:menuButton>
