--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -87,7 +87,8 @@
 							<p:column styleClass="Wid25 num-text-align invest"
 									  headerText="Share %" resizable="true">
 								<span class="dashboardUsrColumnFloatRight"><h:outputText
-										value="#{benefiaciary.sharePerc}">
+										value="#{(benefiaciary.sharePerc)}%">
+
 								</h:outputText></span>
 
 							</p:column>
